# huione-program-library

./: .gitignore  LICENSE  README.md
associated-token-account/program/: Cargo.toml  program-id.md  run-tests.sh
associated-token-account/program/src/: entrypoint.rs  lib.rs  processor.rs
associated-token-account/program/tests/: functional.rs
feature-proposal/cli/: Cargo.toml
feature-proposal/cli/src/: main.rs
feature-proposal/program/: Cargo.toml  program-id.md  run-tests.sh
feature-proposal/program/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs  state.rs
feature-proposal/program/tests/: functional.rs
memo/: README.md
memo/program/: Cargo.toml  program-id.md
memo/program/src/: lib.rs  processor.rs
memo/program/tests/: functional.rs
multi-sig/cli/: Cargo.toml  README.md
multi-sig/cli/src/: config.rs  main.rs
multi-sig/program/: Cargo.toml
multi-sig/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
name/cli/: Cargo.toml
name/cli/src/: config.rs  main.rs  output.rs
name/program/: Cargo.toml
name/program/src/: entrypoint.rs  error.rs  huione_domain_account.rs  instruction.rs  lib.rs  multi_sig_account_inline.rs  processor.rs  state.rs
nft/cli/: Cargo.toml  README.md
nft/cli/src/: config.rs  main.rs  output.rs  sort.rs
nft/js/: .solitarc.js  package.json
nft/js/cli/: constants.ts
nft/program/: Cargo.toml
nft/program/inc/: token.h
nft/program/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
token/: README.md
token/cli/: Cargo.toml  README.md
token/cli/src/: config.rs  main.rs  sort.rs
token/js/: README.md  package-lock.json  package.json  url.js
token/js/examples/: createMintAndTransferTokens.ts
token/js/src/: constants.ts
token/js/src/actions/: approve.ts  approveChecked.ts  burn.ts  burnChecked.ts  closeAccount.ts  createAccount.ts  createAssociatedTokenAccount.ts  createMint.ts  createMultisig.ts  createWrappedNativeAccount.ts  freezeAccount.ts  getOrCreateAssociatedTokenAccount.ts  internal.ts  mintTo.ts  mintToChecked.ts  revoke.ts  setAuthority.ts  syncNative.ts  thawAccount.ts  transfer.ts  transferChecked.ts  updateTokenIcon.ts  updateTokenName.ts  updateTokenSymbol.ts
token/js/src/instructions/: approve.ts  approveChecked.ts  associatedTokenAccount.ts  burn.ts  burnChecked.ts  closeAccount.ts  createMintMetaAccount.ts  freezeAccount.ts  initializeAccount.ts  initializeAccount2.ts  initializeMint.ts  initializeMintMetaAccount.ts  initializeMultisig.ts  internal.ts  mintTo.ts  mintToChecked.ts  revoke.ts  setAuthority.ts  syncNative.ts  thawAccount.ts  transfer.ts  transferChecked.ts  updateTokenIcon.ts  updateTokenName.ts  updateTokenSymbol.ts
token/js/src/state/: account.ts  mint.ts  mintmeta.ts  multisig.ts
token/js/test/: common.ts
token/js/test/e2e/: amount.test.ts  burn.test.ts  close.test.ts  create.test.ts  freeze.test.ts  mint.test.ts  multisig.test.ts  native.test.ts  setAuthority.test.ts  transfer.test.ts  update.test.ts
token/js/test/e2t/: create.test.ts
token/js/test/unit/: index.test.ts
token/program/: Cargo.toml  program-id.md
token/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  native_mint.rs  native_mint_info.rs  processor.rs  state.rs
