[package]
name = "hpl-feature-proposal-cli"
version = "1.0.0"
description = "HPL Feature Proposal Command-line Utility"
authors = ["HUIONE Maintainers <maintainers@huione.com>"]
repository = "https://github.com/huione-labs/huione-program-library"
license = "Apache-2.0"
edition = "2018"

[dependencies]
chrono = "0.4.19"
clap = "2.33.3"
huione-clap-utils =  { path = "../../../huione/clap-utils", version = "1.1.0" }
huione-cli-config =  { path = "../../../huione/cli-config", version = "1.1.0" }
huione-client =  { path = "../../../huione/client", version = "1.1.0" }
huione-logger =  { path = "../../../huione/logger", version = "1.1.0" }
huione-sdk = { path = "../../../huione/sdk", version = "1.1.0" }
hpl-feature-proposal = { version = "1.0", path = "../program", features = ["no-entrypoint"] }

[[bin]]
name = "hpl-feature-proposal"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
