[package]
authors = ["huione Maintainers <maintainers@huione.com>"]
description = "HPL-Multi-Sig Command-line Utility"
edition = "2018"
homepage = "https://hpl.huione.com/token"
license = "Apache-2.0"
name = "hpl-multisig-cli"
repository = "https://github.com/huione-labs/huione-program-library"
version = "1.0.0"

[features]
#testnet = ["hpl-sig/testnet"]
#default = ["testnet"]
#default-features = false

[dependencies]
clap = "2.33.3"
console = "0.14.0"
indicatif = "0.16.2"
serde = "1.0.130"
serde_derive = "1.0.103"
serde_json = { version = "1.0.79", features = ["arbitrary_precision"] }
chrono = "0.4.20-rc.1"

huione-remote-wallet =  { path = "../../../huione/remote-wallet", version = "1.1.0" }
#huione-account-decoder =  { path = "../../../huione/account-decoder", version = "1.1.0"}
huione-clap-utils =  { path = "../../../huione/clap-utils", version = "1.1.0" }
huione-cli-config =  { path = "../../../huione/cli-config", version = "1.1.0" }
huione-cli-output =  { path = "../../../huione/cli-output", default-features = false, version = "1.1.0" }
huione-client =  { path = "../../../huione/client", version = "1.1.0" }
huione-logger =  { path = "../../../huione/logger", version = "1.1.0" }
huione-sdk = { path = "../../../huione/sdk", version = "1.1.0" }
hpl-sig= { version = "=1.0.0", path="../program",  features = ["no-entrypoint", "testnet"] }
lazy_static = "1.4.0"
regex = "1.6.0"
borsh = "0.10.3"
bs58 = "0.4.0"

[[bin]]
name = "hpl-sig"
path = "src/main.rs"
