[package]
name = "hpl-name"
description = "HUIONE Program Library Name Service"
version = "1.0.0"
repository = "https://github.com/huione-labs/huione-program-library"
authors = [
  "huione Maintainers <maintainers@huione.com>"
]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
huione-program =  { path = "../../../huione/sdk/program", version = "1.1.0" }
num-traits = "0.2"
borsh = "0.10.3"
num-derive = "0.3.3"
thiserror = "1.0.26"
lazy_static = "1.4.0"

[dev-dependencies]
#huione-program-test = "1.7.4"
huione-sdk = { path = "../../../huione/sdk", version = "1.1.0" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
