[package]
name = "hpl-nft"
version = "1.0.0"
description = "HUIONE Program Library NFT"
authors = ["huione Maintainers <maintainers@huione.com>"]
repository = "https://github.com/huione-labs/huione-program-library"
license = "Apache-2.0"
edition = "2018"
exclude = ["js/**"]

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
arrayref = "0.3.6"
bytemuck = "1.7.2"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.2"
huione-program =  { path = "../../../huione/sdk/program", version = "1.1.0" }
#huione-program = { version = "1.11.0", path="../../../sdk/program" }
thiserror = "1.0"
borsh = "0.10.3"
shank = "0.0.4"

[dev-dependencies]
lazy_static = "1.4.0"
serial_test = "0.5.1"
#huione-program-test = "1.9.9"
huione-sdk = { path = "../../../huione/sdk", version = "1.1.0" } #"1.7.4"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
