[package]
name = "hpl-token"
version = "1.0.0"
description = "HUIONE Program Library Token"
authors = ["HUIONE Maintainers <maintainers@huione.com>"]
repository = "https://github.com/huione-labs/huione-program-library"
license = "Apache-2.0"
edition = "2018"
exclude = ["js/**"]

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.6"
borsh = { version = "0.9.3", features = ["const-generics"] }
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.2"
huione-program =  { path = "../../../huione/sdk/program", version = "1.1.0" }
thiserror = "1.0"

[dev-dependencies]
huione-sdk = { path = "../../../huione/sdk", version = "1.1.0" } #"1.7.4"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
